--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console.table": "^0.10.0",
+    "express": "^4.18.1",
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
   }
